...
        switch error {
        case let problem as Problem:
            self = problem
        case let error as ClientError:
            self.init(error.underlyingError)
        case let error as URLError:
            self.init(title: "Can't reach the server", detail: error.localizedDescription)
        case is DecodingError:
            self.init(title: "Unexpected response", detail: "The server answered in a shape this app does not know.")
        default:
            self.init(title: "Something went wrong", detail: error.localizedDescription)
        }
    }
...
